@@ -1,8 +1,13 @@
 package com.bidcast.auction_service.auction;
 
+import com.bidcast.auction_service.bid.BidInfrastructureService;
 import com.bidcast.auction_service.bid.BidMetadata;
 import com.bidcast.auction_service.bid.BidRehydrationService;
+import com.bidcast.auction_service.core.exception.AuctionExecutionException;
+import com.bidcast.auction_service.core.exception.NoAdFoundException;
+import com.bidcast.auction_service.core.exception.SessionConcurrencyException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -11,98 +16,140 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.redis.core.SetOperations;
-import org.springframework.data.redis.core.StringRedisTemplate;
-import org.springframework.data.redis.core.ValueOperations;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+import org.redisson.api.RLock;
+import org.redisson.api.RedissonClient;
+import org.springframework.data.redis.core.*;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
+import java.util.concurrent.TimeUnit;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class AuctionEngineTest {
 
     @Mock
     private StringRedisTemplate redisTemplate;
+
     @Mock
-    private ValueOperations<String, String> valueOperations;
+    private RedissonClient redissonClient;
+
+    @Mock
+    private RLock auctionLock;
+    
+    @Mock
+    private RLock rehydrateLock;
+
     @Mock
     private SetOperations<String, String> setOperations;
+
     @Mock
-    private ReceiptTokenService tokenService;
+    private ValueOperations<String, String> valueOperations;
+
+    @Mock
+    private HashOperations<String, Object, Object> hashOperations;
+
+    @Mock
+    private ReceiptTokenService receiptTokenService;
+
     @Mock
     private BidRehydrationService rehydrationService;
-    
+
+    @Mock
+    private BidInfrastructureService infrastructureService;
+
+    @Mock
+    private AuctionPersistenceService auctionPersistenceService;
+
     @Spy
-    private ObjectMapper objectMapper = new ObjectMapper();
+    private ObjectMapper objectMapper = new ObjectMapper().registerModule(new JavaTimeModule());
 
     @InjectMocks
     private AuctionEngine auctionEngine;
 
-    private final String sessionId = "session-test";
+    private final String sessionId = "session-123";
 
     @BeforeEach
-    void setUp() {
-        lenient().when(redisTemplate.opsForValue()).thenReturn(valueOperations);
-        lenient().when(redisTemplate.opsForSet()).thenReturn(setOperations);
+    void setUp() throws InterruptedException {
+        doReturn(setOperations).when(redisTemplate).opsForSet();
+        doReturn(valueOperations).when(redisTemplate).opsForValue();
+        doReturn(hashOperations).when(redisTemplate).opsForHash();
+        
+        when(redissonClient.getLock(contains("lock:auction:"))).thenReturn(auctionLock);
+        when(redissonClient.getLock(contains("lock:rehydrate:"))).thenReturn(rehydrateLock);
+        
+        when(auctionLock.tryLock(anyLong(), anyLong(), any(TimeUnit.class))).thenReturn(true);
+        when(auctionLock.isHeldByCurrentThread()).thenReturn(true);
+        
+        when(rehydrateLock.tryLock(anyLong(), anyLong(), any(TimeUnit.class))).thenReturn(true);
+        when(rehydrateLock.isHeldByCurrentThread()).thenReturn(true);
     }
 
     @Test
-    @DisplayName("Debe elegir la puja más alta con saldo suficiente")
-    void shouldSelectHighestBidWithBudget() throws Exception {
-        BidMetadata lowBid = createMetadata(BigDecimal.valueOf(10), "bid-low");
-        BidMetadata highBid = createMetadata(BigDecimal.valueOf(20), "bid-high");
-        
-        String lowJson = objectMapper.writeValueAsString(lowBid);
-        String highJson = objectMapper.writeValueAsString(highBid);
+    @DisplayName("Gana el anuncio con mayor precio de puja y persiste")
+    void evaluateNext_HighestPriceWinsAndPersists() throws Exception {
+        // Arrange
+        UUID bidId1 = UUID.randomUUID();
+        UUID bidId2 = UUID.randomUUID();
+        doReturn(Set.of(bidId1.toString(), bidId2.toString())).when(setOperations).members(anyString());
 
-        when(setOperations.members(anyString())).thenReturn(Set.of(lowBid.id().toString(), highBid.id().toString()));
-        
-        when(valueOperations.multiGet(anyList())).thenReturn(
-            Arrays.asList(lowJson, highJson),
-            Arrays.asList("10000", "10000")
+        BidMetadata meta1 = new BidMetadata(bidId1, "adv-1", "camp-1", new BigDecimal("0.50"), "url-1");
+        BidMetadata meta2 = new BidMetadata(bidId2, "adv-2", "camp-2", new BigDecimal("0.80"), "url-2");
+
+        List<Object> pipelineResults = List.of(
+            List.of(objectMapper.writeValueAsString(meta1), "100"),
+            List.of(objectMapper.writeValueAsString(meta2), "100")
         );
+        when(redisTemplate.executePipelined(any(SessionCallback.class))).thenReturn(pipelineResults);
 
-        when(tokenService.generateReceiptId(anyString(), any(), anyString(), any())).thenReturn("mock-token");
+        doReturn("receipt-123").when(receiptTokenService).generateReceiptId(anyString(), any(), anyString(), any());
 
-        AuctionResult result = auctionEngine.evaluateNext(sessionId);
+        // Act
+        WinningAd winner = auctionEngine.evaluateNext(sessionId);
 
-        assertTrue(result instanceof WinningAd);
-        assertEquals(highBid.id(), ((WinningAd) result).bidId());
+        // Assert
+        assertNotNull(winner);
+        assertEquals("adv-2", winner.advertiserId());
+        verify(auctionPersistenceService).persistAuctionSuccess(any(WinningAd.class));
+        verify(auctionLock).unlock();
     }
 
     @Test
-    @DisplayName("Debe devolver NoAdFound si nadie tiene saldo")
-    void shouldReturnNoAdFoundWhenNoBudget() throws Exception {
-        BidMetadata bid = createMetadata(BigDecimal.valueOf(50), "bid-high");
-        String bidJson = objectMapper.writeValueAsString(bid);
+    @DisplayName("CONCURRENCIA: Rebota si ya hay una subasta en curso para esa sesión (Lock)")
+    void evaluateNext_RejectsConcurrentAuction() throws InterruptedException {
+        when(auctionLock.tryLock(anyLong(), anyLong(), any(TimeUnit.class))).thenReturn(false);
 
-        when(setOperations.members(anyString())).thenReturn(Set.of(bid.id().toString()));
+        assertThrows(SessionConcurrencyException.class, () -> auctionEngine.evaluateNext(sessionId));
         
-        when(valueOperations.multiGet(anyList())).thenReturn(
-            List.of(bidJson),
-            List.of("100")
-        );
-
-        AuctionResult result = auctionEngine.evaluateNext(sessionId);
-
-        assertTrue(result instanceof NoAdFound);
+        verify(auctionPersistenceService, never()).persistAuctionSuccess(any());
+        verify(auctionLock, never()).unlock();
     }
 
-    private BidMetadata createMetadata(BigDecimal price, String name) {
-        return new BidMetadata(
-                UUID.randomUUID(),
-                "adv-" + name,
-                "camp-" + name,
-                price,
-                name + "-url"
-        );
+    @Test
+    @DisplayName("Lanza NoAdFoundException si no hay pujas activas")
+    void evaluateNext_NoBidsFound() throws InterruptedException {
+        doReturn(Collections.emptySet()).when(setOperations).members(anyString());
+        
+        assertThrows(NoAdFoundException.class, () -> auctionEngine.evaluateNext(sessionId));
+        
+        verify(auctionPersistenceService, never()).persistAuctionSuccess(any());
+        verify(auctionLock).unlock();
+    }
+
+    @Test
+    @DisplayName("Lanza AuctionExecutionException si ocurre un error inesperado")
+    void evaluateNext_UnexpectedError_ThrowsAuctionExecutionException() {
+        doThrow(new RuntimeException("Redis connection failed")).when(setOperations).members(anyString());
+
+        assertThrows(AuctionExecutionException.class, () -> auctionEngine.evaluateNext(sessionId));
+        
+        verify(auctionPersistenceService, never()).persistAuctionSuccess(any());
+        verify(auctionLock).unlock();
     }
 }
